# Euler

./: .gitignore  README.md  control.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
adapters/: adapter.py  buffet_indicator_adapter.py  yfinance_adapter.py
clients/: client.py  fetch_client.py  inference_client.py  logging_config.py  processing_client.py  system_client.py
indicators/: indicator.py
indicators/acceleration_indicators/: README.md
indicators/live_indicators/: 3M_term_slope_indicator.py  6M_term_slope_indicator.py  Buffet_Indicator.py  README.md  ^CPC_indicator.py  ^SKEW_indicator.py  ^VIX3M_indicator.py  ^VIX6M_indicator.py  ^VIX9D_indicator.py  ^VIX_indicator.py  cpc_indicator.py  near_term_stress_ratio_indicator.py  six_month_term_slope_indicator.py  skew_indicator.py  three_month_term_slope_indicator.py  vix3m_indicator.py  vix6m_indicator.py  vix9d_indicator.py  vix_indicator.py
indicators/risk_indicators/: buffett_indicator.py  cpc_indicator.py  near_term_stress_ratio_indicator.py  six_month_term_slope_indicator.py
indicators/velocity_indicators/: README.md
models/: market_scaler.pkl
registries/: dynamic_statistical_weights.py  indicator_registry.py  weight_registry.py
tests/: README.md  conftest.py  run_tests.py
tests/e2e_tests/: analyze_market_signals.py  fetch_all_live_indicator_last_quote.py  test_broadcast_receiver.py  test_gui.py  test_put_call_data.py  test_qt_gui.py  test_udp_simple.py
tests/integration_tests/: test_full_analysis_cycle.py  test_network_broadcast.py
tests/unit_tests/: test_adapters.py  test_basic.py  test_clients.py  test_indicators.py  test_system_client.py
weight_strategies/: __init__.py  adaptive_ensemble_strategy.py  base_strategy.py  equal_weight_strategy.py  linear_static_strategy.py  ml_adaptive_ensemble_strategy.py  momentum_based_strategy.py  risk_proportional_strategy.py  statistical_dynamic_strategy.py  volatility_adjusted_strategy.py
